Delete 5 files form repository, the files were in folder /Exe. Delete the project file LoRaWAN_End_Node.uvguix.user1. Add a folder /Exe and files" extensions .dep, .axf, .bin, .lnp, .sct to .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,11 @@
 *.ilk
 *.map
 *.exp
+*.bin
+*.axf
+*.sct
+*.lnp
+*.dep
 
 # Precompiled Headers
 *.gch
@@ -48,3 +53,4 @@ dkms.conf
 
 # Different descriptions
 *.htm*
+*.user1
